Character page spacing fixes:
- Info tab columns spaced consistently with custom kinks
- Info tab headers resized
- Page horizontal scroll fixed
- Collapsable custom kink button aligned to right and position consistent
- Kink list buttons and comparison selectors spaced consistently across various screen widths

--- a/scss/_character_page.scss
+++ b/scss/_character_page.scss
@@ -50,7 +50,7 @@
 .infotags {
   > .infotag-group {
     .infotag-title {
-      font-size: $h4-font-size;
+      font-size: $h5-font-size;
     }
   }
 }
@@ -88,6 +88,12 @@
 
   .subkink-list.closed {
     display: none;
+  }
+
+  .custom-kink-icon {
+    position: absolute;
+    right: 0.2em;
+    top: 0.5em;
   }
 
   &.subkink {
